Doc/force-app/main/default/objects/Key_Players__c/fields/Check_in_Date__c.field-meta.xml
<CustomField>
    <fullName>Check_in_Date__c</fullName>
    <inlineHelpText>When was this key player contacted?</inlineHelpText>
    <label>Check-in Date</label>
    <type>Date</type>
</CustomField>