Doc/force-app/main/default/objects/Key_Players__c/fields/Primary_Pain__c.field-meta.xml
<CustomField>
    <fullName>Primary_Pain__c</fullName>
    <label>Primary Pain</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>