Doc/force-app/main/default/objects/Key_Players__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <formula>Key_Player_Name__r.Title</formula>
    <label>Title</label>
    <type>Text</type>
</CustomField>